--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -4118,16 +4118,16 @@ fieldset:disabled .btn {
 
 .btn-danger {
   color: #fff;
-  background-color: #F53838;
-  border-color: #F53838;
+  background-color: #3F3D56;
+  border-color: #383645;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 .btn-danger:hover {
   color: #fff;
-  background-color: #d03030;
-  border-color: #c42d2d;
+  background-color: #2f2d40;
+  border-color: #3F3D56;
 }
 
 .btn-check:focus+.btn-danger,
@@ -5750,7 +5750,7 @@ fieldset:disabled .btn {
 
 .navbar-light .navbar-nav .show>.nav-link,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #F53838;
+  color: #3F3D56;
 }
 
 .navbar-light .navbar-toggler {
@@ -20886,6 +20886,7 @@ label {
   -webkit-transition: all 0.3s ease-out;
   -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  background: #3F3D56;
 }
 
 .hover-top.hover-top-shadow-lg:hover,
@@ -21024,6 +21025,150 @@ label {
   -ms-flex-pack: justify;
   justify-content: space-between;
   background: #fff;
+}
+
+#contact-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-left: 70px;
+}
+
+
+.contact-img {
+  height: 400px;
+  width: auto;
+  margin-left: 50px;
+}
+
+.contact-title {
+  text-align: center;
+  letter-spacing: 1px;
+  font-family: Rubik, Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-weight: 500;
+  line-height: 1.2;
+  color: rgb(11, 19, 42);
+  margin-bottom: 50px;
+}
+
+
+.form-div {
+  display: flex;
+  justify-content: center;
+}
+
+.form button {
+  border: none;
+  background: none;
+  color: #8b8ba7;
+}
+
+/* styling of whole input container */
+.form {
+  --timing: 0.3s;
+  --width-of-input: 500px;
+  margin-bottom: 50px;
+  --height-of-input: 60px;
+  --border-height: 2px;
+  --input-bg: #fff;
+  --border-color: #2f2ee9;
+  --border-radius: 30px;
+  --after-border-radius: 1px;
+  position: relative;
+  width: var(--width-of-input);
+  height: var(--height-of-input);
+  display: flex;
+  align-items: center;
+  padding-inline: 0.8em;
+  border-radius: var(--border-radius);
+  transition: border-radius 0.5s ease;
+  background-color: #f0f2f1;
+}
+
+.form-message {
+
+  --timing: 0.3s;
+  --width-of-input: 500px;
+  --height-of-input: 130px;
+  --border-height: 2px;
+  --input-bg: #fff;
+  --border-color: #2f2ee9;
+  --border-radius: 30px;
+  --after-border-radius: 1px;
+  position: relative;
+  width: var(--width-of-input);
+  height: var(--height-of-input);
+  display: flex;
+  align-items: center;
+  padding-inline: 0.8em;
+  border-radius: var(--border-radius);
+  transition: border-radius 0.5s ease;
+  background-color: #f0f2f1;
+}
+
+/* styling of Input */
+.input {
+  font-size: 0.9rem;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  padding-inline: 0.5em;
+  padding-block: 0.7em;
+  border: none;
+}
+
+/* styling of animated border */
+.form:before {
+  content: "";
+  position: absolute;
+  background: var(--border-color);
+  transform: scaleX(0);
+  transform-origin: center;
+  width: 100%;
+  height: var(--border-height);
+  left: 0;
+  bottom: 0;
+  border-radius: 1px;
+  transition: transform var(--timing) ease;
+}
+
+/* Hover on Input */
+.form:focus-within {
+  border-radius: var(--after-border-radius);
+}
+
+input:focus {
+  outline: none;
+}
+
+/* here is code of animated border */
+.form:focus-within:before {
+  transform: scale(1);
+}
+
+/* styling of close button */
+/* == you can click the close button to remove text == */
+.reset {
+  border: none;
+  background: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+/* close button shown when typing */
+input:not(:placeholder-shown)~.reset {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* sizing svg icons */
+.form svg {
+  width: 17px;
+  margin-top: 3px;
+}
+
+#homepage {
+  height: 100vh;
 }
 
 /*-----------------------------------------------
